--- a/.circleci/verbatim-sources/header-section.yml
+++ b/.circleci/verbatim-sources/header-section.yml
@@ -14,6 +14,9 @@ parameters:
   run_build:
     type: boolean
     default: true
+  run_extra_windows_build:
+    type: boolean
+    default: false
 
 executors:
   windows-with-nvidia-gpu:
