[LTC] Code-gen nll_loss2d_forward
Summary:
Code-gen nll_loss2d_forward

Test:
```
lazy_tensor_core/test/cpp/build/test_ptltc
```

Also:
```python
import torch
import lazy_tensor_core
import lazy_tensor_core.debug.metrics

lazy_tensor_core._LAZYC._ltc_init_ts_backend()
device = 'lazy'

inp = torch.rand((3, 3, 100, 100), device=device)
target = torch.zeros((3, 100, 100), dtype=torch.long, device=device)

print(torch.nn.functional.nll_loss(inp, target))
print(lazy_tensor_core.debug.metrics.metrics_report())
```

Outputs:
```
...
Counter: lazy::nll_loss2d_forward
  Value: 1
...
```

Fixes #65576

--- a/lazy_tensor_core/ts_native_functions.yaml
+++ b/lazy_tensor_core/ts_native_functions.yaml
@@ -67,6 +67,8 @@ full_codegen:
   - ne.Tensor
   - nll_loss_backward
   - nll_loss_forward
+  - nll_loss2d_backward
+  - nll_loss2d_forward
   - pow.Tensor_Scalar
   - pow.Tensor_Tensor
   - relu
