Add meta variants to float variants of `normal`
This mimics what `normal_` does.  Not sure whether `TensorOptions` need to
explicitly set the device type to meta for these.

Without this change, both of these variants already work with meta, but
maybe explicit definitions are somehow better (e.g., result in less
computations):

```
>>> torch.normal(mean=4., std=1., size=(1, 2, 3), device='meta')
tensor(..., device='meta', size=(1, 2, 3))
>>> torch.normal(mean=4., std=1., size=(4, 5), out=torch.rand(1, device='meta'))
tensor(..., device='meta', size=(4, 5))
```

[ghstack-poisoned]

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -7916,8 +7916,14 @@
     CPU, CUDA: normal
 
 - func: normal.float_float(float mean, float std, int[] size, *, Generator? generator=None, ScalarType? dtype=None, Layout? layout=None, Device? device=None, bool? pin_memory=None) -> Tensor
+  dispatch:
+    CPU, CUDA: normal
+    Meta: normal_meta
 
 - func: normal.float_float_out(float mean, float std, int[] size, *, Generator? generator=None, Tensor(a!) out) -> Tensor(a!)
+  dispatch:
+    CPU, CUDA: normal_out
+    Meta: normal_out_meta
 
 - func: alias(Tensor(a) self) -> Tensor(a)
   variants: method, function
